--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="light_gray">#E0E0E0</color>
     <color name="off_black">#212121</color>
+    <color name="green">#5fb241</color>
+    <color name="closed_gray">#d8d8d8</color>
 </resources>
